@@ -210,6 +210,9 @@ Use the Fahrenheit scale for temperature data.
 .IP @UPSTEMP@
 Insert the UPS temperature in the current scale.
 
+.IP @BATTTEMP@
+Insert the battery temperature in the current scale.
+
 .IP @UTILITYCOLOR@
 Obsoleted. Use IFBETWEEN instead (see example in upsstats.html).
 
