@@ -1,6 +1,12 @@
+Sun Mar  9 02:45:35 UTC 2008 / Charles Lepple <clepple@gmail.com>
+
+ - Patches from George Ross to support ups.temperature in upsstats.cgi
+ - update config.guess, config.sub and install.sh
+
 Sun Mar  9 02:31:15 UTC 2008 / Charles Lepple <clepple@gmail.com>
 
  - drivers/bestups.[ch]: Don't show ups.temperature if it starts with an 'X'.
+   (Updated driver version to 1.04)
 
 Sat Mar  8 20:52:51 UTC 2008 / Arjen de Korte <arjen@de-korte.org>
 
